-
Bug
-
Resolution: Done
-
P1: Critical
-
5.13.1, 5.14
-
None
-
-
947883141d9d8b3079a8a21981ad8a5ce3c4798e (qt/qtbase/5.13)
Steps to reproduce
- ./simplebrowser www.google.com
- start typing
Actual Result
Cursor is blinking in the input field but characters don't appear.
Expected Result
Characters appear.
By clicking into the URL bar or another window, then clicking into the input field makes keyboard functional again. As far as I see this is a widget issue, quick seems to work fine. Widget minimal browser has the same issue.
RenderWidgetHostViewQtDelegateWidget doesn't receive the events.
Reverting https://codereview.qt-project.org/c/qt/qtbase/+/268743 fixes the issue.
- is duplicated by
-
QTBUG-78126 Keyboard randomly doesn't work in input fields
-
- Closed
-
-
QTBUG-78644 [Regression] Loss of keyboard focus
-
- Closed
-
- relates to
-
QTBUG-83720 [REG 5.13.0->5.13.1] QWidget::setFocusProxy steals (and breaks) focus from widgets at the end of the proxy chain
-
- Closed
-
For Gerrit Dashboard: QTBUG-77364 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
273365,2 | QWidget::setFocusProxy: adjust focus widget properly | 5.13 | qt/qtbase | Status: MERGED | +2 | 0 |