src/widgets/kernel/qwidget.cpp
@@ -6446,7 +6446,7 @@ void QWidget::setFocusProxy(QWidget * w)
 
     if (changingAppFocusWidget) {
         QWidget *newDeepestFocusProxy = d_func()->deepestFocusProxy();
-        QApplicationPrivate::focus_widget = newDeepestFocusProxy ? newDeepestFocusProxy : this;
+        QApplicationPrivate::setFocusWidget(newDeepestFocusProxy ? newDeepestFocusProxy : this, Qt::NoFocusReason);
     }
 }
 
